--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,9 @@
+<%# bootstrapping current user %>
+<% if logged_in? %>
+    <script type='text/javascript'>
+    // setting our currentUser window property
+        window.currentUser = <%= render('/api/users/user.json.jbuilder', user: current_user).html_safe %>
+    </script>
+<% end %>
+
 <div id="root">React is broken</div>
