--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,19 @@
  *= require_self
  */
 
+ @font-face {
+    font-family: NetflixSans;
+    src: url('./fonts/NetflixSans-Regular.otf');
+  }
+ @font-face {
+    font-family: NetflixSansLight;
+    src: url('./fonts/NetflixSans-Light.otf');
+  }
+ @font-face {
+    font-family: NetflixSansMedium;
+    src: url('./fonts/NetflixSans-Medium.otf');
+  }
+  
  body {
      background-color: rgb(11, 11, 11);
  }
