--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -1,3 +1,118 @@
 * {
-    background-color: white;
+    color: white;
+}
+
+.splash-container{
+    font-family: NetflixSansMedium;
+}
+
+.splash-background {
+    background-size: cover;
+    display: block;
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+.splash-header {
+    height: 90px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.splash-header-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 25px;
+}
+
+.splash-main-content {
+    padding: 70px 45px;
+    background: transparent;
+    color: white;
+    position: relative;
+    margin-top: 30px;
+}
+
+.splash-main-content-text {
+    margin: 0 auto;
+    max-width: 950px;
+    padding: 75px 0;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    z-index: 1;
+}
+
+.splash-main-content-text h1 {
+    font-size: 3.125rem;
+    font-weight: 500;
+    margin: 0 auto;
+    max-width: 640px;
+    line-height: 1.1;
+}
+
+.splash-main-content-text h2 {
+    font-family: NetflixSans;
+    font-size: 1.625rem;
+    margin: 1rem auto;
+    max-width: 640px;
+    font-weight: 400;
+}
+
+.splash-main-content-text h3 {
+    font-family: NetflixSans;
+    font-size: 1.2rem;
+    font-weight: 400;
+    max-width: none;
+    padding: 0 5%;
+    padding-bottom: 20px;
+}
+
+#splash-logo {
+    width: 150px;
+    padding-left: 28px;
+    padding-top: 18px;
+}
+
+#splash-linkedin-logo {
+    height: 50px;
+    margin-right: 25px;
+}
+
+#splash-github-logo {
+    height: 40px;
+    margin-right: 25px;
+}
+
+#splash-header-button {
+    border-radius: 4px;
+    color: white;
+    background-color: #e50914;
+    font-size: 16px;
+    font-weight: 400;
+    border: none;
+    padding: 10px 15px;
+    width: 100%;
+    cursor: pointer;
+}
+
+#splash-content-button {
+    background-color: #e50914;
+    border-radius: 4px;
+    border: 0;
+    cursor: pointer;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 15px 10px;
+    width: 20%;
+
 }
