--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
     <%= javascript_include_tag 'application' %>
     <script type="text/javascript">
       window.logoUrl = "<%= image_url('logo.png') %>";
-      // window.splashUrl = "<%= image_url('splash.jpg')%>";
+      window.splashUrl = "<%= image_url('splash.jpg')%>";
       window.linkedinUrl = "<%= image_url('linkedin.png')%>";
       window.githubUrl = "<%= image_url('github.png')%>";
     </script>
