profiles index almost done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
       window.splashUrl = "<%= image_url('splash.jpeg')%>";
       window.linkedinUrl = "<%= image_url('linkedin.png')%>";
       window.githubUrl = "<%= image_url('github.png')%>";
+      window.profileURL = "<%= image_url('profile_icon_default.png')%>"
     </script>
   </head>
 
