--- a/app/assets/stylesheets/profileIndex.scss
+++ b/app/assets/stylesheets/profileIndex.scss
@@ -28,7 +28,7 @@
 }
 
 .profiles-images-container {
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 .profiles-splash-logo {
@@ -53,7 +53,23 @@
 .profile-image-name {
     color: rgb(128, 128, 128);
     font-family: NetflixSansLight;
-    margin-top: 8px;
+    margin-top: 5px;
     text-decoration: none;
 
+}
+
+#manage-profiles-link {
+    text-decoration: none;
+}
+
+#manage-profiles-button {
+    font-size: 18px;
+    font-family: NetflixSansLight;
+    background-color: transparent;
+    border: 1px solid grey;
+    color: grey;
+    cursor: pointer;
+    display: block;
+    margin: 2em 0 1em;
+    padding: 0.5em 1.5em;
 }
