working on edit profiles got images to work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       window.githubUrl = "<%= image_url('github.png')%>";
       window.profileURL = "<%= image_url('profile_icon_default.png')%>"
       window.addProfileURL = "<%= image_url('add_profile.png')%>"
+      window.editProfileURL = "<%= image_url('EditProfileIcon.png')%>"
     </script>
   </head>
 
