--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,10 +1,26 @@
+body {
+    height: 2000px;
+}
+
 .navbar-container {
+    position: fixed;
     font-family: NetflixSans;
     width: 100%;
     height: 90px;
-    background-color: black;
+    background-color: rgb(20, 20, 20);
     display: flex;
     justify-content: space-between;
+}
+
+.navbar-container-bg {
+    position: fixed;
+    font-family: NetflixSans;
+    width: 100%;
+    height: 90px;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    transition: background-color 1s;
 }
 
 .navbar-left {
