--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       window.profileURL = "<%= image_url('profile_icon_default.png')%>"
       window.addProfileURL = "<%= image_url('add_profile.png')%>"
       window.editProfileURL = "<%= image_url('EditProfileIcon.png')%>"
+      window.itaewonClassLogoUrl = "<%= image_url('itaewonclasslogo.png')%>"
     </script>
   </head>
 
