--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -10,6 +10,7 @@ body {
     background-color: rgb(20, 20, 20);
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 
 .navbar-container-bg {
@@ -21,6 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     transition: background-color 1s;
+    z-index: 2;
 }
 
 .navbar-left {
