--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       window.addProfileURL = "<%= image_url('add_profile.png')%>"
       window.editProfileURL = "<%= image_url('EditProfileIcon.png')%>"
       window.itaewonClassLogoUrl = "<%= image_url('itaewonclasslogo.png')%>"
+      window.audioIconUrl = "<%= image_url('audioicon.png')%>"
     </script>
   </head>
 
