--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -1,8 +1,56 @@
+.browse-container {
+    overflow: hidden;
+}
+
 .video-index-container {
-    display: flex;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.genre-title {
+    font-size: 20px;
+    color: white;
+    font-family: NetflixSans;
+    font-weight: 900;
+    margin-left: 50px;
+    margin-bottom: 10px;
 }
 
 .browse-thumbnail {
-    height: 100px;
-    width: 100px;
+    width: 225px;
+    height: 120px;
+    margin-right: 6px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.thumbnail-container {
+    margin-left: 50px;
+    display: flex;
+    width: max-content;
+    transition: all 0.75s ease;
+}
+
+.wrapper {
+    position: relative;
+    
+    .slider-arrow {
+        width: 50px;
+        height: 100%;
+        color: white;
+        position: absolute;
+        z-index: 99;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        cursor: pointer;
+
+        &.left {
+            left: 1;
+        }
+        
+        &.right {
+            right: 0;
+        }
+    }
 }
