--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -1,3 +1,7 @@
+body {
+    height: 2000px;
+}
+
 .browse-container {
     overflow: hidden;
 }
@@ -14,14 +18,6 @@
     font-weight: 900;
     margin-left: 50px;
     margin-bottom: 10px;
-}
-
-.browse-thumbnail {
-    width: 225px;
-    height: 120px;
-    margin-right: 6px;
-    border-radius: 4px;
-    cursor: pointer;
 }
 
 .thumbnail-container {
@@ -52,5 +48,79 @@
         &.right {
             right: 0;
         }
+    }
+}
+
+// Individual Video Thumbnail Container
+.small-video-container {
+    overflow: hidden;
+    width: 225px;
+    height: 120px;
+    margin-right: 6px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: NetflixSansLight;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .small-video-clip {
+        object-fit: cover;
+        position: relative;
+    }
+
+    &:hover {
+        width: 300px;
+        height: 300px;
+        box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
+        -webkit-box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
+        -moz-box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
+    }
+
+    &:hover img {
+        height: 140px;
+    }
+
+    .small-video-info {
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+
+        .small-video-icons {
+            display: flex;
+            margin-bottom: 10px;
+
+            .small-video-icon {
+                border: 2px solid white;
+                padding: 5px;
+                border-radius: 50%;
+                margin-right: 10px;
+                font-size: 16px;
+            }
+        }
+
+        .small-video-info-top {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+            font-size: 14px;
+            font-weight: 500;
+            color: gray;
+
+            .small-video-rating {
+                border: 1px solid gray;
+                padding: 1px 3px;
+                margin: 0 10px;
+            }
+        }
+
+        .small-video-info-description {
+            font-family: NetflixSansLight;
+            margin-bottom: 10px;
+        }
+
     }
 }
