--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -68,12 +68,14 @@ body {
     }
 
     .small-video-clip {
+        width: 100%;
+        height: 140px;
         object-fit: cover;
         position: relative;
     }
 
     &:hover {
-        width: 300px;
+        width: 325px;
         height: 300px;
         box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
         -webkit-box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
