--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -1,7 +1,3 @@
-body {
-    height: 2000px;
-}
-
 .browse-container {
     overflow: hidden;
 }
@@ -9,6 +5,7 @@ body {
 .video-index-container {
     width: 100%;
     margin-top: 10px;
+    margin-bottom: 60px;
 }
 
 .genre-title {
@@ -76,7 +73,7 @@ body {
 
     &:hover {
         width: 325px;
-        height: 300px;
+        height: 275px;
         box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
         -webkit-box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
         -moz-box-shadow: -1px -1px 14px 0px rgba(255,255,255,0.06);
