finished movies index for now need more content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
       window.editProfileURL = "<%= image_url('EditProfileIcon.png')%>"
       window.itaewonClassLogoUrl = "<%= image_url('itaewonclasslogo.png')%>"
       window.audioIconUrl = "<%= image_url('audioicon.png')%>"
+      window.hospitalplaylistlogoUrl = "<%= image_url('hospitalplaylistlogo.png')%>"
+      window.spidermanlogoUrl = "<%= image_url('spidermanlogo.png')%>"
     </script>
   </head>
 
