took out images for heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,15 @@
     <script type="text/javascript">
       window.logoUrl = "<%= image_url('logo.png') %>";
       // window.splashUrl = "<%= image_url('splash.jpg')%>";
-      window.linkedinUrl = "<%= image_url('linkedin.png')%>";
+      // window.linkedinUrl = "<%= image_url('linkedin.png')%>";
       window.githubUrl = "<%= image_url('github.png')%>";
       window.profileURL = "<%= image_url('profile_icon_default.png')%>"
       window.addProfileURL = "<%= image_url('add_profile.png')%>"
       window.editProfileURL = "<%= image_url('EditProfileIcon.png')%>"
-      window.itaewonClassLogoUrl = "<%= image_url('itaewonclasslogo.png')%>"
+      // window.itaewonClassLogoUrl = "<%= image_url('itaewonclasslogo.png')%>"
       window.audioIconUrl = "<%= image_url('audioicon.png')%>"
-      window.hospitalplaylistlogoUrl = "<%= image_url('hospitalplaylistlogo.png')%>"
-      window.spidermanlogoUrl = "<%= image_url('spidermanlogo.png')%>"
+      // window.hospitalplaylistlogoUrl = "<%= image_url('hospitalplaylistlogo.png')%>"
+      // window.spidermanlogoUrl = "<%= image_url('spidermanlogo.png')%>"
     </script>
   </head>
 
