--- a/app/assets/stylesheets/editprofileindex.scss
+++ b/app/assets/stylesheets/editprofileindex.scss
@@ -73,4 +73,17 @@
     display: block;
     margin: 2em 0 1em;
     padding: 0.5em 1.5em;
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+}
+
+#profile-image-edit-container {
+    &:hover{
+        cursor: pointer;
+        border: none;
+        transform: scale(1.1);
+    }
 }
