--- a/app/assets/stylesheets/browse.scss
+++ b/app/assets/stylesheets/browse.scss
@@ -98,6 +98,10 @@
                 border-radius: 50%;
                 margin-right: 10px;
                 font-size: 16px;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
             }
         }
 
