--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -34,6 +34,10 @@
 .navbar-left-link {
     margin: 0 10px;
     text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
 
 .navbar-right-container {
