--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -85,11 +85,19 @@
 #splash-linkedin-logo {
     height: 50px;
     margin-right: 25px;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 #splash-github-logo {
     height: 40px;
     margin-right: 25px;
+
+    &:hover {
+        transform: scale(1.1);
+    }
 }
 
 #splash-header-button {
