--- a/app/assets/stylesheets/spotlight.scss
+++ b/app/assets/stylesheets/spotlight.scss
@@ -43,6 +43,11 @@
     border: 0;
     border-radius: 4px;
     cursor: pointer;
+
+    &:hover { 
+        cursor: pointer;
+        transform: scale(1.1);
+    }
 }
 
 .spotlight-button-container {
@@ -61,6 +66,11 @@
     margin-top: 0px;
     margin-bottom: 0px;
     background-color: transparent;
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
 }
 
 #spotlight-audio-icon {
