--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,7 +2,7 @@
     position: fixed;
     font-family: NetflixSans;
     width: 100%;
-    height: 90px;
+    min-height: 90px;
     background-color: rgb(20, 20, 20);
     display: flex;
     justify-content: space-between;
